@@ -29,47 +29,12 @@
 
 #include "cong-editor-area-bin.h"
 
-#undef PRIVATE
-#define PRIVATE(x) ((x)->private)
-
-struct CongEditorNodeDtdDetails
-{
-	int dummy;
-};
-
-#if 1
-static void 
-create_areas (CongEditorNode *editor_node,
-	      const CongAreaCreationInfo *creation_info);
-#else
-static CongEditorArea*
-generate_block_area (CongEditorNode *editor_node);
-#endif
-
 /* Exported function definitions: */
-GNOME_CLASS_BOILERPLATE(CongEditorNodeDtd, 
-			cong_editor_node_dtd,
-			CongEditorNode,
-			CONG_EDITOR_NODE_TYPE );
-
-static void
-cong_editor_node_dtd_class_init (CongEditorNodeDtdClass *klass)
-{
-
-	CongEditorNodeClass *node_klass = CONG_EDITOR_NODE_CLASS(klass);
-
-#if 1
-	node_klass->create_areas = create_areas;
-#else
-	node_klass->generate_block_area = generate_block_area;
-#endif
-}
-
-static void
-cong_editor_node_dtd_instance_init (CongEditorNodeDtd *node_dtd)
-{
-	node_dtd->private = g_new0(CongEditorNodeDtdDetails,1);
-}
+CONG_EDITOR_NODE_DEFINE_SUBCLASS(Dtd, 
+				 dtd,
+				 CONG_EDITOR_NODE_DTD,
+				 int dummy;
+				 )
 
 CongEditorNodeDtd*
 cong_editor_node_dtd_construct (CongEditorNodeDtd *editor_node_dtd,
@@ -82,18 +47,7 @@ cong_editor_node_dtd_construct (CongEditorNodeDtd *editor_node_dtd,
 	return editor_node_dtd;
 }
 
-CongEditorNode*
-cong_editor_node_dtd_new (CongEditorWidget3 *widget,
-			  CongTraversalNode *traversal_node)
-{
-#if DEBUG_EDITOR_NODE_LIFETIMES
-	g_message("cong_editor_node_dtd_new()");
-#endif
-	return CONG_EDITOR_NODE( cong_editor_node_dtd_construct (g_object_new (CONG_EDITOR_NODE_DTD_TYPE, NULL),
-								 widget,
-								 traversal_node)
-				 );
-}
+CONG_EDITOR_NODE_IMPLEMENT_EMPTY_DISPOSE(dtd)
 
 #if 1
 static void 
